# parallel-sparse-bmm

./: .gitignore  CMakeLists.txt  Exercise-4.cbp  Makefile  NOTES_FOR_THE_EVALUATION.txt  bmm_blocking.cpp  bmm_blocking.hpp  bmm_distributed.cpp  bmm_distributed.hpp  bmm_multithread.cpp  bmm_multithread.hpp  distributed.cpp  four_russians  matrix.cpp  matrix.hpp  multithreaded  omp.cpp  readme.md  sequential1.cpp  sparse.hpp  temp.c
bash_src/: aristotle_hpc_script.sh  hybrid_test.sh  matlab_times_test.sh  multithreaded_test.sh  profile_units.sh  sequential_test.sh  set_parameters.sh
datasets/small/: B_small.mtx  small.mtx
datasets/test/: generate_data.txt
datasets_sample/small/: A_small.mtx  C_result.mtx  C_small.mtx  test.mtx
headers/: file_io.c  file_io.h  mmio.h  my_mpi_comms.hpp  my_time.cpp  parameters.hpp  testing.hpp  utils.hpp
logs/: generate_data.txt  times.csv
matlab/: generateDatasets.m  getResults.m  main.py  octave-workspace  performance.py  timing_performance.m
matlab/samples/: bmm.m
results/: MATLAB_times2_local.csv  MATLAB_times_local.csv
sparse/: matrix.hpp  sparse.cpp  sparse.hpp
src/: Makefile  distributed.out  multithreaded.out  test_local.sh
src/bash_src/: distributed_test.sh  hpc_script.sh  hybrid_test.sh  make_all.sh  multithreaded_test.sh  profile_units.sh  sequential_test.sh  set_filter_parameters.sh  set_parameters.sh
src/distributed/: bmm_distributed.hpp
src/distributed2/: bmm_distributed2.cpp  bmm_distributed2.hpp  distributed2.cpp
src/four_russians/: bmm_four_russians.cpp  bmm_four_russians.hpp  four_russians_utils.cpp  four_russians_utils.hpp  main.cpp
src/headers/: file_io.cpp  file_io.hpp  mmio.hpp  my_mpi_comms.cpp  my_mpi_comms.hpp  my_time.hpp  parameters.hpp  sorting.hpp  testing.hpp  utils.hpp
src/hybrid/: bmm_hybrid.cpp  bmm_hybrid.hpp  hybrid.cpp
src/hybrid2/: bmm_hybrid2.cpp  bmm_hybrid2.hpp
src/matlab/: generateDatasets.m  generate_filter.m  main.py  performance.py  store_sparse_matrix.m  timing_performance.m  (+1 more)
src/sparse/: matrix.cpp  (+6 more)
(+14 files in other folders)
